# dyros_wholebody_control

./: .gitmodules  README.md
dyros_tocabi_v2/: install_prereq.sh
dyros_tocabi_v2/tocabi_controller/: CMakeLists.txt  package.xml
dyros_tocabi_v2/tocabi_controller/launch/: simulation.launch  simulation_with_camera.launch
dyros_tocabi_v2/tocabi_controller/src/: state_manager.cpp  tocabi_controller.cpp
dyros_tocabi_v2/tocabi_description/heightmap/: generate_heightmap_basic.py  generate_heightmap_gaussian.py
dyros_tocabi_v2/tocabi_description/mujoco_model/: dyros_tocabi.xml  dyros_tocabi_hand.xml  dyros_tocabi_with_camera.xml  simulation_scene.xml
dyros_tocabi_v2/tocabi_description/robots/: dyros_tocabi_description.gv
dyros_tocabi_v2/tocabi_lib/include/: qp.h
dyros_tocabi_v2/tocabi_lib/include/tocabi_lib/: link.h  robot_data.h  (+1 more)
dyros_tocabi_v2/tocabi_lib/src/: qp.cpp
mujoco_ros_sim/mujoco_ros/include/: mjros.h
mujoco_ros_sim/mujoco_ros/src/: main.cpp  mjros.cpp
mujoco_ros_sim/mujoco_ros_msgs/: CMakeLists.txt
tocabi_cc/: CMakeLists.txt  README.md  package.xml  preview.m
tocabi_cc/data/: com_log.txt  contact_wrench_des.txt  contact_wrench_ft.txt  contact_wrench_id.txt  contact_wrench_log.txt  cp_log.txt  dataCC1.txt  dataWM1.txt  dataWM2.txt  dataWM3.txt  dataWM4.txt  dataWM5.txt  dataWM6.txt  dataWM7.txt  dataWM8.txt  data_plot.asv  data_plot.m  lfoot_traj_log.txt  pelv_traj_log.txt  torque_idn_log.txt  torque_pd_log.txt  torque_sum_log.txt  zmp_log.txt
tocabi_cc/include/: cc.h  collision_manager.h  control_manager.h  dyn_wbc.h  kin_wbc.h  task_manager.h  teleop_manager.h  utils.h  walking_manager.h
tocabi_cc/include/collision_manager/: collision_manager.h  kalman.h  tracked_obstacle.h
tocabi_cc/setting/: setting_cc_param.yaml  setting_kalman_filter_param.yaml
tocabi_cc/src/: cc.cpp  collision_manager.cpp  control_manager.cpp  dyn_wbc.cpp  kin_wbc.cpp  task_manager.cpp  teleop_manager.cpp  utils.cpp  walking_manager.cpp
